@@ -89,7 +89,6 @@ Makefile
 common/Makefile
 misc/Makefile
 flumotion/Makefile
-flumotion/common/Makefile
 flumotion/component/Makefile
 flumotion/component/consumers/Makefile
 flumotion/component/consumers/applestreamer/Makefile
